# Telegram_bot_for_tracking_habits

./: .gitignore  Dockerfile  Dockerfilebot  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 29fa97f43711_init_migration.py
bot/: loader.py  main.py
bot/api/: __init__.py  authentication.py  habit_client.py
bot/config_data/: config.py
bot/database/: database.py  models.py
bot/handlers/: __init__.py
bot/handlers/custom_handlers/: __init__.py  add_habit.py  edit_habit.py  get_habit.py  login.py  track_habit.py
bot/handlers/default_handlers/: __init__.py  start.py
bot/keyboards/inline/: __init__.py  edit_habit.py  track_habit.py
bot/states/: __init__.py  add_habit.py  edit_habit.py  login.py  track_habit.py
bot/utils/: __init__.py  password_validation.py  set_bot_commands.py  user_decorator.py
bot/utils/misc/: displaying_habit.py
database/: auth_models.py  database.py  habits_models.py  models.py
models/: habit_tracking_models.py  habits_models.py
routers/: auth.py  auth_router.py  habit_tracking_router.py  habits_router.py  user.py
shemas/: auth_shemas.py  habits_shemas.py  shema.py
utils/: security.py
