[project]
name = "telegram-bot-for-tracking-habits"
version = "0.1.0"
description = ""
authors = [
    {name = "stepa",email = "stepa.korobov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg (==0.30.0)",
    "fastapi (==0.115.8)",
    "pydantic (==2.10.6)",
    "sqlalchemy (==2.0.37)",
    "uvicorn (==0.34.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
