[project]
name = "telegram-bot-for-tracking-habits"
version = "0.1.0"
description = "Telegram bot for tracking habits"
authors = [
    {name = "Stepan",email = "stepa.korobov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg (>=0.31.0,<0.32.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "envparse (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
